--- a/.github/workflows/gitee.yml
+++ b/.github/workflows/gitee.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     # UTC 20:00 -> CST (China) 4:00, see https://datetime360.com/cn/utc-cst-china-time/
-    - cron: '* * */3 * *'
+    - cron: '* 7,23 */3 * *'
 
 name: Mirror GitHub Selected Repos to Gitee
 jobs:
