--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: sync-dockere/jd_scripts
 
 on:
   schedule:
-  - cron:  "* 7,23 */3 * *"
+  - cron:  "35 7,23 */2 * *"
   workflow_dispatch:
   watch:
     types: started
